Adding Nav bar and Styling it

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
 </head>
 <body>
     <!-- TODO: Navigation bar -->
+     <nav class="nav-content">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="#About" class="nav-link">About</a>
+        <a href="#contact" class="nav-link">Contact</a>
+     </nav>
     <!-- TODO: Main section with heading and paragraph -->
+     <header class="hello">
+        <div class="overlay">
+                <div class="hello-content">
+                <h1>Hie, I'm Victoria Joy M'bwana</h1>
+                <p>A Computer Engineering Student in My Fifth Year</p>
+                <p>Welcome to my personal website</p>
+            </div>
+        </div>
+    </header>
     <!-- TODO: Change Theme button -->
     <!-- TODO: List items and Reset button -->
     <!-- TODO: Form for adding new list items -->
