Styling the main section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Practical Exam</title>
+    <title>Victoria M'bwana Practical Exam</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +15,6 @@
      </nav>
     <!-- TODO: Main section with heading and paragraph -->
      <header class="hello">
-        <div class="overlay">
                 <div class="hello-content">
                 <h1>Hie, I'm Victoria Joy M'bwana</h1>
                 <p>A Computer Engineering Student in My Fifth Year</p>
