Styling the main section

--- a/index.html
+++ b/index.html
@@ -22,8 +22,26 @@
             </div>
         </div>
     </header>
+
     <!-- TODO: Change Theme button -->
+     <section>
+     <div class="toggle-button">
+        <button>Toggle Button</button>
+     </div>
+     </section>
     <!-- TODO: List items and Reset button -->
+
+    <section>
+        <div class="hobbies">
+            <h2>My Hobbies</h2>
+                 <ul >
+                    <li>Reading</li>
+                    <li>Music</li>
+                    <li>Cleaning</li>
+                    <li>Exploring</li>
+                </ul>
+        </div>
+    </section>
     <!-- TODO: Form for adding new list items -->
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
